packages/svelte/tests/compiler-errors/samples/const-tag-whitespace/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected_whitespace',
		message: 'Expected whitespace',
		position: [19, 19]
	}
});
